contact us page

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -12,7 +12,7 @@ html(lang="en")
         ul
           li: a(href="/") Home
           li: a(href="/about") About
-          li: a(href="/contactus") Contact Us
+          li: a(href="/contact") Contact Us
           li: a(href="/login") Login
     main
       block content
