--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -13,6 +13,7 @@ html(lang="en")
           li: a(href="/") Home
           li: a(href="/about") About
           li: a(href="/contact") Contact Us
+          li: a(href="/dashboard") Dashboard
           li: a(href="/login") Login
     main
       block content
