--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -5,7 +5,7 @@ block content
     .hero-text
       h2 Discover Near-Expiry Deals & Save More
       p Fresh products at amazing discounts, available near you.
-      a.btn-primary(href="/search") Start Exploring
+      a.btn-primary(href="/dashboard") Start Exploring
     .hero-image
       img(src="./hero.avif", alt="Save Before Expiry app hero")
 
