--- a/app/views/dashboard-layout.pug
+++ b/app/views/dashboard-layout.pug
@@ -3,16 +3,12 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title= title || "Save Before Expiry"
+    title= title || "Dashboard"
     link(rel="stylesheet", href="./styles.css")
   body
     header.header
       h1.logo Save Before Expiry
-      nav.navbar
-        ul
-          li: a(href="/") Home
-          li: a(href="/about") About
-          li: a(href="/contact") Contact Us
+      include navbar
     main
       block content
     footer.footer
