--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -10,7 +10,8 @@ html(lang="en")
       h1.logo Save Before Expiry
       nav.navbar
         ul
-          li: a(href="/") Home
+          li: a(href="/home") Home
+          li: a(href="/deals") Deals
           li: a(href="/about") About
           li: a(href="/contact") Contact Us
     main
