--- a/app/views/product-detail.pug
+++ b/app/views/product-detail.pug
@@ -37,8 +37,7 @@ block content
           span.discount-tag -#{product.discount_percent}%
         p.helper Reserve now and pick up before closing time.
         .cta-row
-          a.btn-primary(href="/contact") Reserve for pickup
-          a.btn-ghost(href="/dashboard") Back to deals
+          a.btn-ghost(href="/deals") Back to deals
       ul.freshness-points
         li Ready for pickup within 2 hours of reservation.
         li Temperature-controlled holding for chilled items.
